--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Hej there!</h1>
-        <p>My name's Dante and I like doing fun programming projects, you can find me here: </p>
-        <a href="https://gitlab.com/flyingraccoons"/>
+        <p>My name's Dante and I like doing fun programming projects, you can find me here: </p><br/>
+        <a href="https://gitlab.com/flyingraccoons">Gitlab.com</a>
     </body>
 </html>
